--- a/Analysis_Netflix Dataset.ipynb
+++ b/Analysis_Netflix Dataset.ipynb
@@ -9,7 +9,7 @@
     "\n",
     "### (Big Data Analysis with Python)\n",
     "\n",
-    "#### By : Hossam Medhat Shokry\n"
+    "#### By : Mohaned Mohamed Elsayed\n"
    ]
   },
   {
@@ -8781,7 +8781,7 @@
    "metadata": {},
    "source": [
     "By-\n",
-    "Hossam Medhat Shokry\n"
+    "Mohamed Mohamed Elsayed\n"
    ]
   }
  ],
